# bs-comfyui-model-manager

./: .comfyignore  .gitignore  NOTICE  README.md  __init__.py  pyproject.toml
bsmm/: __init__.py  downloads.py  models.py  routes.py  util.py
bsmm/providers/: __init__.py  base.py  civitai.py  huggingface.py
docs/screenshots/: README.md
tests/: selftest.py  test_huggingface.py  test_models.py  test_util.py
tests/fixtures/: scail2_tree.json  wan_tree.json
web/: comfy_ext.js
webapp/: app.js  index.html  styles.css
