[project]
name = "bs-comfyui-model-manager"
version = "1.0.2"
description = "Download models from HuggingFace (no API key) and manage your local ComfyUI models (list, move, delete) from a built-in panel."
authors = [
    { name = "Enob-Studio S.L." },
    { name = "Juan Gea", email = "juangea@bone-studio.com" },
]
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
# No external dependencies: Python stdlib only. aiohttp/PromptServer are provided by ComfyUI.
dependencies = []
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/juangea/bs-comfyui-model-manager"

# Metadata for the ComfyUI Registry (comfy-cli). Does not affect runtime.
[tool.comfy]
PublisherId = "bonestudio"
DisplayName = "Bone-Studio Model Manager"
Icon = ""
